compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__type_params__custom_type_nested_named_args_count_once.snap
---
source: compiler-core/src/erlang/tests/type_params.rs
expression: "\n        pub type Wibble(a, b) {\n            Wibble(a, b)\n        }\n\n        pub fn wibble() -> Wibble(a, Wibble(a, b)) {\n            todo\n        }\n        "
---
----- SOURCE CODE

        pub type Wibble(a, b) {
            Wibble(a, b)
        }

        pub fn wibble() -> Wibble(a, Wibble(a, b)) {
            todo
        }
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([wibble/0]).
-export_type([wibble/2]).

-type wibble(I, J) :: {wibble, I, J}.

-file("project/test/my/mod.gleam", 6).
-spec wibble() -> wibble(K, wibble(K, any())).
wibble() ->
    erlang:error(#{gleam_error => todo,
        message => <<"`todo` expression evaluated. This code has not yet been implemented."/utf8>>,
        file => <<?FILEPATH/utf8>>,
        module => <<"my/mod"/utf8>>,
        function => <<"wibble"/utf8>>,
        line => 7}).
