compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__type_params__result_type_inferred_count_once.snap
---
source: compiler-core/src/erlang/tests/type_params.rs
expression: "\n        pub fn wibble() {\n            let assert Ok(_) = wobble()\n        }\n\n        pub type Wobble(a) {\n            Wobble\n        }\n\n        pub fn wobble() -> Result(a, Wobble(a)) {\n            todo\n        }\n        "
---
----- SOURCE CODE

        pub fn wibble() {
            let assert Ok(_) = wobble()
        }

        pub type Wobble(a) {
            Wobble
        }

        pub fn wobble() -> Result(a, Wobble(a)) {
            todo
        }
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([wobble/0, wibble/0]).
-export_type([wobble/1]).

-type wobble(I) :: wobble | {gleam_phantom, I}.

-file("project/test/my/mod.gleam", 10).
-spec wobble() -> {ok, any()} | {error, wobble(any())}.
wobble() ->
    erlang:error(#{gleam_error => todo,
        message => <<"`todo` expression evaluated. This code has not yet been implemented."/utf8>>,
        file => <<?FILEPATH/utf8>>,
        module => <<"my/mod"/utf8>>,
        function => <<"wobble"/utf8>>,
        line => 11}).

-file("project/test/my/mod.gleam", 2).
-spec wibble() -> {ok, any()} | {error, wobble(any())}.
wibble() ->
    _assert_subject = wobble(),
case _assert_subject of
    {ok, _} -> _assert_subject;
    _assert_fail ->
        erlang:error(#{gleam_error => let_assert,
                    message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                    file => <<?FILEPATH/utf8>>,
                    module => <<"my/mod"/utf8>>,
                    function => <<"wibble"/utf8>>,
                    line => 3,
                    value => _assert_fail,
                    start => 39,
                    'end' => 66,
                    pattern_start => 50,
                    pattern_end => 55})
end.
